Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
           </div>
 
     <!-- CARD — AI STUDIO (com card secundário conectado) -->
-<div class="service-card service-card--aistudio">
+<!-- CARD — AI STUDIO (com card secundário conectado) -->
+<div class="service-card service-card--aistudio" id="card-aistudio" data-io="watch">
   <div class="service-card__icon">
     <img src="assets/img/aistudio.png.png" alt="Tullu AI Studio">
   </div>
@@ -379,23 +380,24 @@
   </div>
 
   <!-- Linha de ligação fina entre o card principal e o secundário -->
-  <span class="aistudio-linkline" aria-hidden="true"></span>
+  <span class="aistudio-linkline" data-animate="line" aria-hidden="true"></span>
 
   <!-- Mini “hero” sobre a linha (título pequeno) -->
-  <div class="aistudio-mini-hero">
+  <div class="aistudio-mini-hero" data-animate="mini-hero">
     <h4 class="aistudio-mini-hero__title">
       <span class="flame" aria-hidden="true">🔥</span> Agentes em alta
     </h4>
   </div>
 
   <!-- CARD SECUNDÁRIO (menor, com brilho sutil) -->
-  <a href="aistudio.html" class="aistudio-mini-card" aria-label="Ver agentes do AI Studio">
+  <a href="aistudio.html" class="aistudio-mini-card" data-animate="mini-card"
+     aria-label="Ver agentes do AI Studio">
     <!-- Avatares sobrepostos no topo -->
-    <div class="mini-card__avatars" aria-hidden="true">
-      <img src="assets/img/agents/kael.jpg" alt="Agente Kael" class="avatar avatar--sm avatar--1">
-      <img src="assets/img/agents/steve.jpg" alt="Agente Steve" class="avatar avatar--sm avatar--2">
-      <img src="assets/img/agents/ryan.jpg" alt="Agente Ryan" class="avatar avatar--sm avatar--3">
-      <img src="assets/img/agents/arion.jpg" alt="Agente Arion" class="avatar avatar--sm avatar--4">
+    <div class="mini-card__avatars" data-animate="avatars" aria-hidden="true">
+      <img src="assets/img/agents/kael.jpg"   alt="Agente Kael"   class="avatar avatar--sm avatar--1">
+      <img src="assets/img/agents/steve.jpg"  alt="Agente Steve"  class="avatar avatar--sm avatar--2">
+      <img src="assets/img/agents/ryan.jpg"   alt="Agente Ryan"   class="avatar avatar--sm avatar--3">
+      <img src="assets/img/agents/arion.jpg"  alt="Agente Arion"  class="avatar avatar--sm avatar--4">
       <img src="assets/img/agents/custom.jpg" alt="Agente Custom" class="avatar avatar--sm avatar--5">
     </div>
 
@@ -408,7 +410,32 @@
     </div>
   </a>
 </div>
-          <div class="service-card">
+
+<!-- JS (somente para este card) -->
+<script>
+(() => {
+  const card = document.getElementById('card-aistudio');
+  if (!card) return;
+
+  // Sem IO disponível → mostra direto
+  if (!('IntersectionObserver' in window)) {
+    card.classList.add('is-visible');
+    return;
+  }
+
+  const io = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        card.classList.add('is-visible');
+        io.disconnect();
+      }
+    });
+  }, { threshold: 0.25 });
+
+  io.observe(card);
+})();
+</script>
+     <div class="service-card">
             <div class="service-card__icon"><img src="assets/img/playlab.png" alt="Tullu PlayLab"></div>
             <div class="service-card__content">
               <h3 class="service-card__title">PlayLab</h3>
