--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@
      aria-label="Ver agentes do AI Studio">
     <!-- Avatares sobrepostos no topo -->
     <div class="mini-card__avatars" data-animate="avatars" aria-hidden="true">
-      <img src="assets/img/agents/kael.jpg"   alt="Agente Kael"   class="avatar avatar--sm avatar--1">
-      <img src="assets/img/agents/steve.jpg"  alt="Agente Steve"  class="avatar avatar--sm avatar--2">
-      <img src="assets/img/agents/ryan.jpg"   alt="Agente Ryan"   class="avatar avatar--sm avatar--3">
-      <img src="assets/img/agents/arion.jpg"  alt="Agente Arion"  class="avatar avatar--sm avatar--4">
-      <img src="assets/img/agents/custom.jpg" alt="Agente Custom" class="avatar avatar--sm avatar--5">
+      <img src="assets/img/agents/kael.png"   alt="Agente Kael"   class="avatar avatar--sm avatar--1">
+      <img src="assets/img/agents/steve.png"  alt="Agente Steve"  class="avatar avatar--sm avatar--2">
+      <img src="assets/img/agents/ryan.png"   alt="Agente Ryan"   class="avatar avatar--sm avatar--3">
+      <img src="assets/img/agents/arion.png"  alt="Agente Arion"  class="avatar avatar--sm avatar--4">
+      <img src="assets/img/agents/nova.png" alt="Agente Nova" class="avatar avatar--sm avatar--5">
     </div>
 
     <!-- Texto curto dentro do card secundário -->
