Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -378,33 +378,29 @@
     </p>
     <a href="aistudio.html" class="btn btn--secondary">Conheça o AI Studio</a>
   </div>
-
-  <!-- Linha de ligação fina entre o card principal e o secundário -->
+<!-- Linha de ligação -->
   <span class="aistudio-linkline" data-animate="line" aria-hidden="true"></span>
 
-  <!-- Mini “hero” sobre a linha (título pequeno) -->
+  <!-- Mini título -->
   <div class="aistudio-mini-hero" data-animate="mini-hero">
     <h4 class="aistudio-mini-hero__title">
       <span class="flame" aria-hidden="true">🔥</span> Agentes em alta
     </h4>
   </div>
 
-  <!-- CARD SECUNDÁRIO (menor, com brilho sutil) -->
-  <a href="aistudio.html" class="aistudio-mini-card" data-animate="mini-card"
-     aria-label="Ver agentes do AI Studio">
-    <!-- Avatares sobrepostos no topo -->
+  <!-- CARD SECUNDÁRIO -->
+  <a href="aistudio.html" class="aistudio-mini-card" data-animate="mini-card" aria-label="Ver agentes do AI Studio">
+
+    <!-- Só 3 avatares -->
     <div class="mini-card__avatars" data-animate="avatars" aria-hidden="true">
-      <img src="assets/img/kael.png"   alt="Agente Kael"   class="avatar avatar--sm avatar--1">
-      <img src="assets/img/steve.png"  alt="Agente Steve"  class="avatar avatar--sm avatar--2">
-      <img src="assets/img/ryan.png"   alt="Agente Ryan"   class="avatar avatar--sm avatar--3">
-      <img src="assets/img/arion.png"  alt="Agente Arion"  class="avatar avatar--sm avatar--4">
-      <img src="assets/img/nova.png" alt="Agente Nova" class="avatar avatar--sm avatar--5">
+      <img src="assets/img/kael.png"  alt="Agente Kael"  class="avatar avatar--sm avatar--1">
+      <img src="assets/img/steve.png" alt="Agente Steve" class="avatar avatar--sm avatar--2">
+      <img src="assets/img/ryan.png"  alt="Agente Ryan" class="avatar avatar--sm avatar--3">
     </div>
 
-    <!-- Texto curto dentro do card secundário -->
     <div class="mini-card__body">
       <p class="mini-card__text">
-        O AI Studio está voando: agentes prontos para WhatsApp + CRM, aprendendo com seus dados e convertendo no automático.
+        Agentes prontos que atendem, entendem e convertem no WhatsApp.
         Implantação em até 7 dias.
       </p>
     </div>
