Update subtitle in aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -248,7 +248,7 @@
         <header class="section__header">
           <h2 class="section__title">A solução de atendimento mais vendida:</h2>
           <p class="section__subtitle">
-            Visualize agendamentos, conversas, status e resultados em um só lugar. Sem atrito, sem planilhas soltas.
+            <strong>A camada após os agentes:</strong>visualize agendamentos, conversas, status e resultados dosteus agentes em um só lugar. Sem atrito, sem planilhas soltas.
           </p> <br>
           <div class="tag tag--ai">Custa<strong>menos</strong>que um jovem aprendiz!</div>
         </header>
