--- a/aistudio.html
+++ b/aistudio.html
@@ -90,8 +90,8 @@
   <div class="container">
     <!-- H1 com classe do hero para herdar o estilo -->
     <header class="section__header">
-      <h1 class="hero__title">Escolha seu <span class="gradient-text">Agente de IA</span></h1>
-      <p class="hero__subtitle">Consultores digitais prontos para operar no WhatsApp — cada um com foco setorial e protocolo próprio.</p>
+      <h1 class="hero__title">Escolha seu <span class="gradient-text">AI Agent</span></h1>
+      <p class="hero__subtitle">Consultores digitais prontos para operar no seu WhatsApp, cada um com foco setorial e protocolo próprio.</p>
     </header>
 
     <div class="agents__grid">
@@ -248,7 +248,7 @@
         <header class="section__header">
           <h2 class="section__title">A solução de atendimento mais vendida:</h2>
           <p class="section__subtitle">
-            <strong>A camada após os agentes:</strong>visualize agendamentos, conversas, status e resultados dosteus agentes em um só lugar. Sem atrito, sem planilhas soltas.
+            <strong>A camada após os agentes de IA:</strong> visualize agendamentos, conversas, status e resultados dos teus agentes em um só lugar. Sem atrito, sem planilhas soltas.
           </p> <br>
           <div class="tag tag--ai">Custa<strong>menos</strong>que um jovem aprendiz!</div>
         </header>
