Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -223,7 +223,7 @@
         <div class="agent-card__body">
           <h3 class="agent-card__title"><strong>Arion</strong></h3>
           <p class="agent-card__desc">
-            <strong>Generalista premium</strong>, adaptável a qualquer nicho. Integra <strong>automações avançadas</strong> (entregues pela Tullu via parceiros).
+            <strong>Generalista premium</strong>, adaptável a qualquer nicho. Integra <strong>automações avançadas</strong><i>*Webhooks</i>.
           </p>
           <ul class="agent-card__bullets">
             <li>Orquestração multi-ferramentas</li>
