Add customization title for agents section

--- a/aistudio.html
+++ b/aistudio.html
@@ -167,6 +167,7 @@
         </div>
       </article>
 
+        <h2 class="hero2__title">Você também pode<span class="gradient-text"> personalizar seus agentes!</span></h2>
       <!-- RYEN -->
       <article class="agent-card">
         <div class="agent-card__avatar-wrapper">
