Improve formatting of agent titles in aistudio.html
Added line breaks to agent titles for better formatting.

--- a/aistudio.html
+++ b/aistudio.html
@@ -101,7 +101,7 @@
           <img src="assets/img/hyat.png" alt="Hyat — agente de IA para imobiliárias e advocacias" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Hyat</strong></h3>
+          <h3 class="agent-card__title"><strong>Hyat</strong><br></h3>
           <p class="agent-card__desc">
             Estrategista para <strong>imobiliárias</strong> e <strong>advocacias</strong>. Memória longa, leitura e retenção de contexto acima da média.
           </p>
@@ -125,7 +125,7 @@
           <img src="assets/img/nova.png" alt="Nova — agente de IA para clínicas e recepção" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Nova</strong></h3>
+          <h3 class="agent-card__title"><strong>Nova</strong><br></h3>
           <p class="agent-card__desc">
             Focada em <strong>clínicas</strong> (odontologia, estética, saúde). Educada, ágil e precisa no <strong>agendamento</strong>.
           </p>
@@ -149,7 +149,7 @@
           <img src="assets/img/steve.png" alt="Steve — agente de IA para venda de carros e concessionárias" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Steve</strong></h3>
+          <h3 class="agent-card__title"><strong>Steve</strong><br></h3>
           <p class="agent-card__desc">
             Especialista em <strong>concessionárias</strong> e vendedores de <strong>veículos</strong>. Conduz o lead até o test-drive.
           </p>
@@ -174,7 +174,7 @@
           <img src="assets/img/ryen.png" alt="Ryen — agente de IA para tech e soluções personalizadas" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Ryen</strong></h3>
+          <h3 class="agent-card__title"><strong>Ryen</strong><br></h3>
           <p class="agent-card__desc">
             Ultra ágil para <strong>tecnologia</strong> e empresas de <strong>solução sob medida</strong>. Conversa clara e converte rápido.
           </p>
@@ -198,7 +198,7 @@
           <img src="assets/img/kael.png" alt="Kael — agente de IA para academias, crossfit e nutrição" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Kael</strong></h3>
+          <h3 class="agent-card__title"><strong>Kael</strong><br></h3>
           <p class="agent-card__desc">
             Direto ao ponto para <strong>academias</strong>, <strong>crossfit</strong> e <strong>nutricionistas</strong>. Energia e consistência.
           </p>
@@ -222,7 +222,7 @@
           <img src="assets/img/arion.png" alt="Arion — agente de IA generalista avançado" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
-          <h3 class="agent-card__title"><strong>Arion</strong></h3>
+          <h3 class="agent-card__title"><strong>Arion</strong><br></h3>
           <p class="agent-card__desc">
             <strong>Generalista premium</strong>, adaptável a qualquer nicho. Integra <strong>automações avançadas</strong><i>*Webhooks</i>.
           </p>
