Update hero section with new AI agents solution
Removed old call-to-action buttons and added a new section for AI agents.

--- a/aistudio.html
+++ b/aistudio.html
@@ -75,14 +75,12 @@
                         Mapeamento de oportunidades de IA por área, protótipos rápidos e validação com dados. Roadmap tático dos próximos 90 dias.
                     </p>
                     
-                    <div class="hero__cta">
-                        <a href="https://wa.me/5511959029428?text=Ol%C3%A1!%20Vim%20pelo%20AI%20Studio%20da%20Tullu%20Motion.%20Quero%20explorar%20solu%C3%A7%C3%B5es%20com%20IA!" class="btn btn--primary btn--large" target="_blank">
-                            Explorar soluções com IA
-                        </a>
-                        <a href="#como-funciona" class="btn btn--outline btn--large">
-                            Ver como funciona
-                        </a>
-                    </div>
+                   <div class="hero__cta">
+  <div class="hero__cta-glass">
+    <span>NOVA SOLUÇÃO COM AI AGENTS</span>
+  </div>
+</div>
+
                 </div>
             </div>
         </section>
