Update reception bullet point for clarity

--- a/aistudio.html
+++ b/aistudio.html
@@ -130,7 +130,7 @@
           <ul class="agent-card__bullets">
             <li>Confirmação + lembretes automáticos</li>
             <li>Fila inteligente por prioridade</li>
-            <li>Recepção com linguagem humanizada</li>
+            <li>Recepção humanizada</li>
           </ul>
         </div>
         <div class="agent-card__footer">
