Update hero CTA with new glass style

--- a/aistudio.html
+++ b/aistudio.html
@@ -75,7 +75,7 @@
                         Mapeamento de oportunidades de IA por área, protótipos rápidos e validação com dados. Roadmap tático dos próximos 90 dias.
                     </p>
                     
-                   <div class="hero__cta">
+                  <div class="hero__cta hero__cta--glass">
   <div class="hero__cta-glass">
     <span>NOVA SOLUÇÃO COM AI AGENTS</span>
   </div>
