Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -1,3 +1,38 @@
+
+ <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Studio - Soluções sob medida com IA | Tullu Motion</title>
+    <meta name="description" content="Mapeamento de oportunidades de IA por área, protótipos rápidos e validação com dados. Soluções inteligentes para problemas específicos.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tullumotion.com/aistudio">
+    <meta property="og:title" content="AI Studio - Soluções sob medida com IA | Tullu Motion">
+    <meta property="og:description" content="Mapeamento de oportunidades de IA por área, protótipos rápidos e validação com dados.">
+    <meta property="og:image" content="assets/img/aistudio.png.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tullumotion.com/aistudio">
+    <meta property="twitter:title" content="AI Studio - Soluções sob medida com IA | Tullu Motion">
+    <meta property="twitter:description" content="Mapeamento de oportunidades de IA por área, protótipos rápidos e validação com dados.">
+    <meta property="twitter:image" content="assets/img/aistudio.png.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/img/tu.png.png">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/branch-pages.css">
+</head>
 <body>
     <!-- Header -->
     <header class="header" id="header">
@@ -453,3 +488,5 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/branch-animations.js"></script>
 </body>
+</html>
+
