Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -209,7 +209,7 @@
         </div>
         <div class="agent-card__footer">
           <a class="btn btn--primary" target="_blank"
-             href="https://wa.me/5511959029428?text=Quero%20conhecer%20o%20agente%20Kael%20para%20minha%20academia.">
+             href="aboutkael.html">
             Conhecer mais sobre Kael
           </a>
         </div>
