Atualizar o aboutkael.html

--- a/aboutkael.html
+++ b/aboutkael.html
@@ -6,7 +6,8 @@
   <title>Kael — Agente de Atendimento para Academias | Tullu Motion</title>
   <meta name="description" content="O Kael atende seus leads e alunos 24/7 no WhatsApp, agenda aulas, responde dúvidas e integra com seu CRM. Página dedicada para donos/gestores de academia." />
   <!-- Usa seu styles.css global já existente -->
-  <link rel="preload" href="img/Kael.png" as="image" />
+  <link rel="preload" href="assets/img/kael.png" as="image" />
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
