Atualizar o aboutkael.html

--- a/aboutkael.html
+++ b/aboutkael.html
@@ -109,6 +109,52 @@
       </div>
     </section>
 
+<!-- 3) HERO NO MEIO DA PÁGINA (com a foto redonda do Kael) -->
+    <section class="hero hero--branch hero--aistudio" id="hero-kael">
+      <div class="container">
+        <div class="hero__content">
+          <!-- avatar redondo reaproveitando classes de agente -->
+        <article class="agent-card">
+  <div class="agent-card__avatar-wrapper">
+    <img src="assets/img/kael.png" alt="Kael — agente de IA para academias" class="agent-card__avatar">
+  </div>
+  <div class="agent-card__body">
+    <h3 class="agent-card__title"><strong>Kael</strong></h3>
+    <p class="agent-card__desc">
+      Direto para <strong>academias</strong> e <strong>boxes</strong>. Responde rápido, agenda e não deixa lead esfriar.
+    </p>
+    <ul class="agent-card__bullets">
+      <li>Triagem de planos/horários</li>
+      <li>Prova social e ofertas pontuais</li>
+      <li>Reengajamento de ex-alunos</li>
+    </ul>
+  </div>
+  <div class="agent-card__footer">
+    <a class="btn btn--primary" href="https://wa.me/5511958029428?text=Quero%20simular%20o%20Kael%20na%20minha%20academia" target="_blank" rel="noopener">
+      Conhecer mais sobre Kael
+    </a>
+  </div>
+</article>
+
+          <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
+          <h2 class="hero__title">
+            <span class="gradient-text">O Kael resolve o atendimento</span> que custa matrículas.
+          </h2>
+          <p class="hero__subtitle">
+            Capta, qualifica e <strong>agenda automaticamente</strong> — 24/7 — no tom da sua marca.
+          </p>
+
+          <div class="hero__cta">
+            <a href="https://wa.me/5511959029428?text=Quero%20simular%20o%20Kael%20na%20minha%20academia" class="btn btn--primary btn--large" target="_blank" rel="noopener">
+              Testar no meu WhatsApp
+            </a>
+            <a href="#o-que-voce-recebe" class="btn btn--outline btn--large">Ver entregáveis</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <!-- 2) RECURSOS PRINCIPAIS -->
     <section class="features" id="servicos">
       <div class="container">
@@ -151,33 +197,7 @@
       </div>
     </section>
 
-    <!-- 3) HERO NO MEIO DA PÁGINA (com a foto redonda do Kael) -->
-    <section class="hero hero--branch hero--aistudio" id="hero-kael">
-      <div class="container">
-        <div class="hero__content">
-          <!-- avatar redondo reaproveitando classes de agente -->
-          <div class="agent-card__avatar-wrapper" style="margin:0 auto 1rem; max-width:180px;">
-            <img src="assets/img/kael.png" alt="Kael — agente de IA para academias" class="agent-card__avatar">
-          </div>
-
-          <img src="assets/img/aistudio.png.png" alt="AI Studio" class="hero__logo">
-          <h2 class="hero__title">
-            <span class="gradient-text">O Kael resolve o atendimento</span> que custa matrículas.
-          </h2>
-          <p class="hero__subtitle">
-            Capta, qualifica e <strong>agenda automaticamente</strong> — 24/7 — no tom da sua marca.
-          </p>
-
-          <div class="hero__cta">
-            <a href="https://wa.me/5511959029428?text=Quero%20simular%20o%20Kael%20na%20minha%20academia" class="btn btn--primary btn--large" target="_blank" rel="noopener">
-              Testar no meu WhatsApp
-            </a>
-            <a href="#o-que-voce-recebe" class="btn btn--outline btn--large">Ver entregáveis</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
+    
     <!-- 4) O QUE VOCÊ RECEBE -->
     <section class="value-cards" id="o-que-voce-recebe">
       <div class="container">
