Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <!-- DEMO — VÍDEO (solução mais quente) -->
+    <!--<!-- DEMO — VÍDEO (solução mais quente) -->
     <section id="demo" class="demo">
       <div class="container">
         <header class="demo__header section__header">
@@ -96,7 +96,7 @@
         </header>
 
         <!-- Vídeo MP4 local (assets/img) -->
-        <div class="demo__video" id="video" role="region" aria-label="Demonstração do agente e CRM">
+        <!--div class="demo__video" id="video" role="region" aria-label="Demonstração do agente e CRM">
           <video
             class="demo__video-el"
             controls
@@ -107,7 +107,7 @@
             <source src="assets/img/demo-crm.mp4" type="video/mp4"/>
             Seu navegador não suporta o vídeo. <a href="assets/img/demo-crm.mp4">Baixe aqui</a>.
           </video>
-        </div>
+        </div> -->
 
         <div class="demo__cta">
           <br><br>
