Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -194,12 +194,12 @@
       <!-- KAEL -->
       <article class="agent-card">
         <div class="agent-card__avatar-wrapper">
-          <img src="assets/img/kael.png" alt="Kael — agente de IA para academias, crossfit e nutrição" class="agent-card__avatar">
+          <img src="assets/img/kael.png" alt="Kael — agente de IA para academias, esportes e nutrição" class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
           <h3 class="agent-card__title"><strong>Kael</strong><br></h3>
           <p class="agent-card__desc">
-            Direto para <strong>academias</strong>, <strong>boxes de cross</strong> e <strong>nutrição</strong>. Responde rápido, agenda e não deixa lead esfriar.
+            Direto para <strong>academias</strong> e <strong>esportes no geral</strong>. Responde rápido, agenda e não deixa lead esfriar.
           </p>
           <ul class="agent-card__bullets">
             <li>Triagem de planos/horários</li>
