Atualizar o aboutkael.html

--- a/aboutkael.html
+++ b/aboutkael.html
@@ -130,8 +130,8 @@
     </ul>
   </div>
   <div class="agent-card__footer">
-    <a class="btn btn--primary" href="https://wa.me/5511958029428?text=Quero%20simular%20o%20Kael%20na%20minha%20academia" target="_blank" rel="noopener">
-      Conhecer mais sobre Kael
+    <a class="btn btn--primary" href="https://wa.me/5511959029428?text=Quero%20simular%20o%20Kael%20na%20minha%20academia" target="_blank" rel="noopener">
+      Quero simular no meu negócio
     </a>
   </div>
 </article>
