Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -90,14 +90,14 @@
     <!-- H1 com classe do hero para herdar o estilo -->
     <header class="section__header">
       <h1 class="hero__title">Escolha seu <span class="gradient-text">  AI Agent</span></h1>
-      <p class="hero__subtitle">Cada agente já vem treinado para um setor e fala no tom da sua marca. Instalação rápida, operação 24/7 e acompanhamento em um único painel.</p>
+      <p class="hero__subtitle">Simule grátis. Cada agente já vem treinado para um setor e fala no tom da sua marca. Instalação rápida, operação 24/7 e acompanhamento em um único painel.</p>
     </header>
 
     <div class="agents__grid">
       <!-- HYAT -->
       <article class="agent-card">
         <div class="agent-card__avatar-wrapper">
-          <img src="assets/img/hyat.png" alt="Hyat — agente de IA para imobiliárias e advocacias" class="agent-card__avatar">
+          <img src="assets/img/hyat.png" alt="Hyat — agente de IA para imobiliárias, advocacias e corretoras." class="agent-card__avatar">
         </div>
         <div class="agent-card__body">
           <h3 class="agent-card__title"><strong>Hyat</strong><br></h3>
