--- a/aistudio.html
+++ b/aistudio.html
@@ -76,6 +76,23 @@
                         A Tullu instala um agente de IA operando no seu WhatsApp + um painel simples para acompanhar leads, agendamentos e resultados. Zero fricção, zero mistério — apenas o que move o ponteiro do negócio.
                     </p>
                     
+                    <!-- === HERO PORTAL CTA (coloque logo após a seção #hero) === -->
+<section class="portal-cta" aria-label="Acesso de clientes">
+  <div class="container">
+    <div class="portal-cta__wrap">
+      <a
+        href="https://app.tullumotion.com"
+        class="portal-cta__btn"
+        target="_blank"
+        rel="noopener"
+        aria-label="Abrir o painel do cliente Tullu Motion em nova aba"
+      >
+        JÁ SOU CLIENTE — ACESSAR MEU CRM
+      </a>
+    </div>
+  </div>
+</section>
+                    
                   <div class="hero__cta hero__cta--glass">
   <div class="hero__cta-glass">
     <span>NOVA SOLUÇÃO COM AI AGENTS</span>
