Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -84,7 +84,7 @@
        class="btn btn--primary btn--large" 
        target="_blank" 
        rel="noopener">
-      JÁ SOU CLIENTE — ACESSAR MEU CRM
+      JÁ SOU CLIENTE/ACESSAR MEU CRM
     </a>
   </div>
 </section><br>
