Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
               <h3 class="service-card__title">PlayLab</h3>
               <p class="service-card__tagline">Experiências que geram engajamento real</p>
               <p class="service-card__description">Ativações e jogos que capturam leads e alimentam seu funil automaticamente.</p>
-              <a href="playlab.html" class="btn btn--secondary">Conhecer o PlayLab</a>
+              <a href="playlabv.html" class="btn btn--secondary">Conhecer o PlayLab</a>
             </div>
           </div>
         </div><br><br>
