Atualizar o aistudio.html

--- a/aistudio.html
+++ b/aistudio.html
@@ -102,7 +102,7 @@
   <div class="container">
     <!-- H1 com classe do hero para herdar o estilo -->
     <header class="section__header">
-      <h1 class="hero__title">Escolha seu <span class="gradient-text">  AI Agent</span></h1>
+      <h1 class="hero__title">Escolha seu <span class="gradient-text">agente</span></h1>
       <p class="hero__subtitle">Simule grátis. Cada agente já vem treinado para um setor e fala no tom da sua marca. Instalação rápida, operação 24/7 e acompanhamento em um único painel.</p>
     </header>
 
